@@ -33,7 +33,12 @@
 <!-- appropriate code -->
 <articleinfo>
  <title>&app; Manual V&manrevision;</title>
-
+ 
+ <abstract role="description">
+       <para>
+	 User manual for the glChess, a 2D/3D chess game for GNOME.
+       </para>
+ </abstract>
  <copyright>
   <year>2006</year>
   <holder>Andreas Røsdal</holder>
@@ -49,7 +54,7 @@
 <!-- An address can be added to the publisher information.  If a role is 
      not specified, the publisher/author is the same for all versions of the 
      document.  -->
-    <publisher> 
+    <publisher role="maintainer"> 
       <publishername> GNOME Documentation Project </publishername> 
     </publisher> 
 
