@@ -1,3 +1,8 @@
+2006-12-27  Andreas Røsdal  <andreasr@gnome.org>
+
+	* help/C/glchess.xml: Add missing XML elements to the documentation,
+	which prevented 'make install' from completing (Closing Bug #369550).
+
 2006-12-26  Danilo Šegan  <danilo@gnome.org>
 
 	* help/Makefile.am: Switch to gnome-doc-utils.
